<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        android:summary="@string/settings_summary1"
        android:title="@string/settings_title1"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="fun.kitsunebi.kitsunebi4android.ui.perapp.PerAppActivity"
            android:targetPackage="fun.kitsunebi.kitsunebi4android" />
    </Preference>

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/is_enable_proxy_logging"
        android:summary="@string/settings_summary2"
        android:title="@string/settings_title2"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/is_hide_dns_logs"
        android:summary="@string/settings_summary3"
        android:title="@string/settings_title3"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:defaultValue="223.5.5.5"
        android:key="@string/local_dns"
        android:summary="@string/settings_summary4"
        android:title="@string/settings_title4"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:defaultValue="http,tls"
        android:key="@string/sniffing"
        android:summary="@string/settings_summary5"
        android:title="@string/settings_title5"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:defaultValue="tun2socks"
        android:key="@string/inbound_tag"
        android:summary="@string/settings_summary6"
        android:title="@string/settings_title6"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="core_version"
        app:title="@string/settings_title7"
        app:summary="@string/coreName"
        app:iconSpaceReserved="false"/>

    <Preference
        app:key="app_version"
        app:title="@string/settings_title8"
        app:summary="@string/versionName"
        app:iconSpaceReserved="false"/>
</PreferenceScreen>