<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/is_enable_per_app_vpn"
        android:title="@string/settings_per_app_title1"
        app:iconSpaceReserved="false" />
<!--settings_per_app_summary1-->
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/per_app_modes"
        android:entryValues="@array/per_app_modes_values"
        android:key="@string/per_app_mode"
        android:summary="@string/settings_per_app_summary2"
        android:title="@string/settings_per_app_title2"
        app:iconSpaceReserved="false" />

    <Preference
        android:summary="@string/settings_per_app_summary3"
        android:title="@string/allowed_list"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.weilizan.kitsunebi.ui.perapp.AppListActivity"
            android:targetPackage="com.weilizan.kitsunebi">
            <extra
                android:name="per_app_mode"
                android:value="0" />
        </intent>
    </Preference>

    <Preference
        android:summary="@string/settings_per_app_summary4"
        android:title="@string/disallowed_list"
        app:iconSpaceReserved="false">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.weilizan.kitsunebi.ui.perapp.AppListActivity"
            android:targetPackage="com.weilizan.kitsunebi">
            <extra
                android:name="per_app_mode"
                android:value="1" />
        </intent>
    </Preference>
</PreferenceScreen>